<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ABMProducts.view.fragments.ProductRegisterViewFragment"
    android:id="@+id/frame_layout_product_register_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linear_layout_fragment_product_register"
        android:orientation="vertical"
        android:padding="@dimen/padding_relative_layout_register_product">

        <TextView
            android:text="@string/title_product_register_fragment"
            style="@style/style_title_abm"
            android:layout_marginBottom="@dimen/margin_bottom_title_register_product">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_edittext_code_article"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_code_article_register_product"
                style="@style/style_edit_text"
                android:inputType="number">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_hint_bar_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_product_bar_code_register_product"
                style="@style/style_edit_text"
                android:lines="1"
                android:inputType="text">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_hint_article_descriptiion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_description_register_product"
                style="@style/style_edit_text"
                android:lines="1"
                android:inputType="text">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/string_edit_text_package_per_base"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginRight="@dimen/margin_buttons_abm_product_register">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_package_per_base"
                    android:inputType="number"
                    style="@style/style_edit_text">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/string_edit_text_package_height"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_package_height"
                    android:inputType="number"
                    style="@style/style_edit_text">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Space
            style="@style/space_abm">
        </Space>
        <Button
            android:id="@+id/btn_register_product_view_RegisterProduct"
            style="@style/style_button_abm"
            android:text="@string/string_button_register_product">
        </Button>


    </LinearLayout>

</FrameLayout>