<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame_view_product_find"
    tools:context=".ABMProducts.view.fragments.ProductFindViewFragment">

    <LinearLayout
        android:id="@+id/linear_layout_fragment_product_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_relative_layout_register_product">

        <TextView
            style="@style/style_title_abm"
            android:layout_marginBottom="@dimen/margin_bottom_title_register_product"
            android:text="@string/title_product_find_fragment"></TextView>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_edittext_code_article">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_code_article_find_product"
                style="@style/style_edit_text"
                android:inputType="number"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Space style="@style/space_abm"></Space>

        <Button
            android:id="@+id/btn_find_product_view_FindProduct"
            style="@style/style_button_abm"
            android:text="@string/string_button_find_product"></Button>

        <Space style="@style/space_abm"></Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/grey_800"
                android:orientation="vertical"
                android:padding="@dimen/padding_find_product_view_linear_layout">
                <com.google.android.material.textview.MaterialTextView
                    style="@style/show_data_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/datos_producto"
                    android:background="@color/grey_900">
                </com.google.android.material.textview.MaterialTextView>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_product_data_find_product"
                    style="@style/show_data_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.google.android.material.textview.MaterialTextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">

            </LinearLayout>
        </LinearLayout>



    </LinearLayout>
</FrameLayout>